cmake_minimum_required(VERSION 3.15)
project(Test_61)

set(CMAKE_CXX_STANDARD 14)

add_executable(Test_61 main.cpp 01_loop/01_main.cpp)

add_executable(01_loop_01_main 01_loop/01_main.cpp 01_loop/hello.cpp 01_loop/hello.h 04_interview/baidu_uproot.cpp)
add_executable(01_loop_dhfkjdsh 01_loop/dhfkjdsh.cpp)
add_executable(01_loop_vector_learn 01_loop/vector_learn.cpp)
add_executable(01_loop_thread_learn 01_loop/thread_learn.cpp)
add_executable(01_loop_enum_study 01_loop/enum_study.cpp)
add_executable(01_loop_enum_learning 01_loop/enum_learning.cpp)
add_executable(01_loop_static_s 01_loop/static_s.cpp)
add_executable(01_loop_support 01_loop/support.cpp)
add_executable(01_loop_main 01_loop/main.cpp)
add_executable(01_loop_srand_s 01_loop/srand_s.cpp)
add_executable(02_c++_cincout 02_c++/cin_cout.cpp)
add_executable(02_c++_data_structure 02_c++/data_structure.cpp)
add_executable(02_face_01_class 02_face/01_class.cpp )
add_executable(02_face_02_function 02_face/02_function.cpp)
add_executable(02_face_03_memberAcces 02_face/03_memberAcces.cpp)
add_executable(02_face_04_classFunction 02_face/04_classFunction.cpp)
add_executable(02_face_04_classFunction_xigou 02_face/04_classFunction_xigou.cpp 02_face/class_function.cpp 02_face/class_function.h 02_face/fuck.cpp)
add_executable(02_face_05_classcopy 02_face/05_classcopy.cpp)
add_executable(02_face_06_friendfunction 02_face/06_friendfunction.cpp)
add_executable(02_face_07_inline 02_face/07_inline.cpp)
add_executable(02_face_08_this 02_face/08_this.cpp)
add_executable(02_face_09_classptr 02_face/09_classptr.cpp)
add_executable(02_face_10_staticmember 02_face/10_staticmember.cpp)
add_executable(02_face_11_inherit 02_face/11_inherit.cpp)
add_executable(02_face_12_reload 02_face/12_reload.cpp)
add_executable(02_face_fuck 02_face/fuck.cpp)
add_executable(03_advanced_01_fileflow 03_advanced/01_fileflow.cpp )
add_executable(03_advanced_02_error 03_advanced/02_error.cpp)
add_executable(03_advanced_03_dynamicmem 03_advanced/03_dynamicmem.cpp)
add_executable(03_advanced_04_namespace 03_advanced/04_namespace.cpp)
add_executable(03_advanced_05_threading 03_advanced/05_threading.cpp)
add_executable(regular_expression_dd regular_expression/regular_01.cpp regular_expression/regular_02.cpp regular_expression/regular_03.cpp)
add_executable(04_interview_baidu_uproot 04_interview/baidu_uproot.cpp 04_interview/byte_cutRope.cpp)
add_executable(04_interview_byte_cutRope 04_interview/byte_cutRope.cpp)
add_executable(04_interview_raw_cutRope 04_interview/raw_cutRope.cpp)
